--- a/archives/toutiao-search/2023-11-29.md
+++ b/archives/toutiao-search/2023-11-29.md
@@ -1,59 +1,69 @@
 # 2023-11-29
 
-共 117 条
+共 124 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 29 2023 09:45:21 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Nov 29 2023 10:19:41 GMT+0800 (China Standard Time) -->
 1. [杨妞花：不接受余华英的任何道歉](https://so.toutiao.com/search?keyword=杨妞花：不接受余华英的任何道歉)
 1. [伊朗新增驱逐舰可同时探测上百目标](https://so.toutiao.com/search?keyword=伊朗新增驱逐舰可同时探测上百目标)
 1. [汇聚全球“链力量”](https://so.toutiao.com/search?keyword=汇聚全球“链力量”)
-1. [王思聪进军文旅 王健林拟延迟IPO](https://so.toutiao.com/search?keyword=王思聪进军文旅+王健林拟延迟IPO)
+1. [爸爸和女儿吃饭时即兴来了段科目三](https://so.toutiao.com/search?keyword=爸爸和女儿吃饭时即兴来了段科目三)
 1. [军大衣花棉袄在大学生中风靡](https://so.toutiao.com/search?keyword=军大衣花棉袄在大学生中风靡)
 1. [《美丽的草原我的家》原唱德德玛去世](https://so.toutiao.com/search?keyword=《美丽的草原我的家》原唱德德玛去世)
 1. [网红小涛在非洲遇害 其亲属发声](https://so.toutiao.com/search?keyword=网红小涛在非洲遇害+其亲属发声)
 1. [运动会上演军大衣队VS花棉袄队](https://so.toutiao.com/search?keyword=运动会上演军大衣队VS花棉袄队)
-1. [交易员感叹芒格离世：痛失一位大师](https://so.toutiao.com/search?keyword=交易员感叹芒格离世：痛失一位大师)
-1. [爸爸和女儿吃饭时即兴来了段科目三](https://so.toutiao.com/search?keyword=爸爸和女儿吃饭时即兴来了段科目三)
-1. [印缅边境现“欢迎来中国土地”？误传](https://so.toutiao.com/search?keyword=印缅边境现“欢迎来中国土地”？误传)
-1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
-1. [王思聪穿休闲服见地方领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服见地方领导)
-1. [中国10家航司取消近9000趟赴泰航班](https://so.toutiao.com/search?keyword=中国10家航司取消近9000趟赴泰航班)
-1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
-1. [辅警拦下摩托驾驶员被怼你也违法](https://so.toutiao.com/search?keyword=辅警拦下摩托驾驶员被怼你也违法)
 1. [辽宁一小学全班罢课？教育局回应](https://so.toutiao.com/search?keyword=辽宁一小学全班罢课？教育局回应)
-1. [查理·芒格十大投资箴言](https://so.toutiao.com/search?keyword=查理·芒格十大投资箴言)
-1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
+1. [辅警拦下摩托驾驶员被怼你也违法](https://so.toutiao.com/search?keyword=辅警拦下摩托驾驶员被怼你也违法)
+1. [印缅边境现“欢迎来中国土地”？误传](https://so.toutiao.com/search?keyword=印缅边境现“欢迎来中国土地”？误传)
+1. [王思聪穿休闲服见地方领导](https://so.toutiao.com/search?keyword=王思聪穿休闲服见地方领导)
+1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
 1. [直击武汉大学130周年校庆](https://so.toutiao.com/search?keyword=直击武汉大学130周年校庆)
+1. [王思聪进军文旅 王健林拟延迟IPO](https://so.toutiao.com/search?keyword=王思聪进军文旅+王健林拟延迟IPO)
 1. [库班将独行侠35亿美元卖给赌场大亨](https://so.toutiao.com/search?keyword=库班将独行侠35亿美元卖给赌场大亨)
 1. [波司登回应高价羽绒服](https://so.toutiao.com/search?keyword=波司登回应高价羽绒服)
-1. [雷军祝母校武汉大学生日快乐](https://so.toutiao.com/search?keyword=雷军祝母校武汉大学生日快乐)
-1. [荷兰大选“变天”欧洲为何感到惊吓](https://so.toutiao.com/search?keyword=荷兰大选“变天”欧洲为何感到惊吓)
-1. [兰州瓜农刺死城管案再开庭](https://so.toutiao.com/search?keyword=兰州瓜农刺死城管案再开庭)
-1. [海底捞回应科目三让顾客不适](https://so.toutiao.com/search?keyword=海底捞回应科目三让顾客不适)
-1. [专家：95%以上肺结节为良性](https://so.toutiao.com/search?keyword=专家：95%以上肺结节为良性)
-1. [滴滴平台崩溃后部分司机开始提现](https://so.toutiao.com/search?keyword=滴滴平台崩溃后部分司机开始提现)
-1. [20天前被问责的财政局长要提拔了](https://so.toutiao.com/search?keyword=20天前被问责的财政局长要提拔了)
-1. [巴菲特悼念芒格](https://so.toutiao.com/search?keyword=巴菲特悼念芒格)
-1. [媒体：从阿里云到滴滴的崩溃一夜](https://so.toutiao.com/search?keyword=媒体：从阿里云到滴滴的崩溃一夜)
-1. [车主称违章照片系拼接 警方回应](https://so.toutiao.com/search?keyword=车主称违章照片系拼接+警方回应)
-1. [投资界传奇大佬芒格去世 享年99岁](https://so.toutiao.com/search?keyword=投资界传奇大佬芒格去世+享年99岁)
-1. [媒体揭秘：印度成美国人的缅北](https://so.toutiao.com/search?keyword=媒体揭秘：印度成美国人的缅北)
-1. [网友近3小时买空滞留18吨甘蔗](https://so.toutiao.com/search?keyword=网友近3小时买空滞留18吨甘蔗)
-1. [欧冠：多特蒙德3-1 AC米兰提前晋级](https://so.toutiao.com/search?keyword=欧冠：多特蒙德3-1+AC米兰提前晋级)
-1. [媒体：军大衣火了 给高价羽绒服提个醒](https://so.toutiao.com/search?keyword=媒体：军大衣火了+给高价羽绒服提个醒)
-1. [企业因丢弃过期辣椒被罚5000元冤吗](https://so.toutiao.com/search?keyword=企业因丢弃过期辣椒被罚5000元冤吗)
-1. [阿根廷当选总统访白宫却见不到拜登](https://so.toutiao.com/search?keyword=阿根廷当选总统访白宫却见不到拜登)
-1. [泰航恢复9条国内航线](https://so.toutiao.com/search?keyword=泰航恢复9条国内航线)
-1. [男子称搓澡时因身材胖遭技师嘲笑](https://so.toutiao.com/search?keyword=男子称搓澡时因身材胖遭技师嘲笑)
+1. [德德玛：草原飞出来的歌唱家](https://so.toutiao.com/search?keyword=德德玛：草原飞出来的歌唱家)
+1. [滴滴系统崩溃12小时损失有多大](https://so.toutiao.com/search?keyword=滴滴系统崩溃12小时损失有多大)
+1. [中国10家航司取消近9000趟赴泰航班](https://so.toutiao.com/search?keyword=中国10家航司取消近9000趟赴泰航班)
 1. [23年没来往继子继承房产 法院改判](https://so.toutiao.com/search?keyword=23年没来往继子继承房产+法院改判)
+1. [滴滴辟谣一夜有司机收入超690亿](https://so.toutiao.com/search?keyword=滴滴辟谣一夜有司机收入超690亿)
+1. [武大130周年雷军捐13亿](https://so.toutiao.com/search?keyword=武大130周年雷军捐13亿)
+1. [专家：95%以上肺结节为良性](https://so.toutiao.com/search?keyword=专家：95%以上肺结节为良性)
+1. [媒体：从阿里云到滴滴的崩溃一夜](https://so.toutiao.com/search?keyword=媒体：从阿里云到滴滴的崩溃一夜)
+1. [网友近3小时买空滞留18吨甘蔗](https://so.toutiao.com/search?keyword=网友近3小时买空滞留18吨甘蔗)
+1. [巴菲特悼念芒格](https://so.toutiao.com/search?keyword=巴菲特悼念芒格)
+1. [20天前被问责的财政局长要提拔了](https://so.toutiao.com/search?keyword=20天前被问责的财政局长要提拔了)
+1. [滴滴平台崩溃后部分司机开始提现](https://so.toutiao.com/search?keyword=滴滴平台崩溃后部分司机开始提现)
+1. [海底捞回应科目三让顾客不适](https://so.toutiao.com/search?keyword=海底捞回应科目三让顾客不适)
+1. [投资界传奇大佬芒格去世 享年99岁](https://so.toutiao.com/search?keyword=投资界传奇大佬芒格去世+享年99岁)
+1. [荷兰大选“变天”欧洲为何感到惊吓](https://so.toutiao.com/search?keyword=荷兰大选“变天”欧洲为何感到惊吓)
+1. [阿根廷当选总统访白宫却见不到拜登](https://so.toutiao.com/search?keyword=阿根廷当选总统访白宫却见不到拜登)
+1. [媒体：军大衣火了 给高价羽绒服提个醒](https://so.toutiao.com/search?keyword=媒体：军大衣火了+给高价羽绒服提个醒)
+1. [车主称违章照片系拼接 警方回应](https://so.toutiao.com/search?keyword=车主称违章照片系拼接+警方回应)
+1. [演唱会后小杨哥旗下账号涨粉400万](https://so.toutiao.com/search?keyword=演唱会后小杨哥旗下账号涨粉400万)
+1. [企业因丢弃过期辣椒被罚5000元冤吗](https://so.toutiao.com/search?keyword=企业因丢弃过期辣椒被罚5000元冤吗)
+1. [秦海璐：30岁没结婚没什么关系](https://so.toutiao.com/search?keyword=秦海璐：30岁没结婚没什么关系)
+1. [两兄弟制售假冒牛肉被判刑](https://so.toutiao.com/search?keyword=两兄弟制售假冒牛肉被判刑)
+1. [莫伊塞斯社媒告别：感谢山东和球迷](https://so.toutiao.com/search?keyword=莫伊塞斯社媒告别：感谢山东和球迷)
+1. [男子称搓澡时因身材胖遭技师嘲笑](https://so.toutiao.com/search?keyword=男子称搓澡时因身材胖遭技师嘲笑)
+1. [媒体揭秘：印度成美国人的缅北](https://so.toutiao.com/search?keyword=媒体揭秘：印度成美国人的缅北)
+1. [美代表“引用”中方发言 耿爽回应](https://so.toutiao.com/search?keyword=美代表“引用”中方发言+耿爽回应)
+1. [阿根廷当选总统为何改变对华调门](https://so.toutiao.com/search?keyword=阿根廷当选总统为何改变对华调门)
+1. [专家：“军大衣”为何热或许不重要](https://so.toutiao.com/search?keyword=专家：“军大衣”为何热或许不重要)
+1. [多项民调显示侯康配支持度大幅上升](https://so.toutiao.com/search?keyword=多项民调显示侯康配支持度大幅上升)
+1. [刘德华父亲葬礼将以私人形式举行](https://so.toutiao.com/search?keyword=刘德华父亲葬礼将以私人形式举行)
+1. [泰国总理接到诈骗电话](https://so.toutiao.com/search?keyword=泰国总理接到诈骗电话)
+1. [大四男生华山拍照不慎坠崖失联10天](https://so.toutiao.com/search?keyword=大四男生华山拍照不慎坠崖失联10天)
+1. [上官正义谈武汉一鉴定所被调查](https://so.toutiao.com/search?keyword=上官正义谈武汉一鉴定所被调查)
+1. [交易员感叹芒格离世：痛失一位大师](https://so.toutiao.com/search?keyword=交易员感叹芒格离世：痛失一位大师)
+1. [查理·芒格十大投资箴言](https://so.toutiao.com/search?keyword=查理·芒格十大投资箴言)
+1. [雷军祝母校武汉大学生日快乐](https://so.toutiao.com/search?keyword=雷军祝母校武汉大学生日快乐)
+1. [兰州瓜农刺死城管案再开庭](https://so.toutiao.com/search?keyword=兰州瓜农刺死城管案再开庭)
+1. [欧冠：多特蒙德3-1 AC米兰提前晋级](https://so.toutiao.com/search?keyword=欧冠：多特蒙德3-1+AC米兰提前晋级)
+1. [泰航恢复9条国内航线](https://so.toutiao.com/search?keyword=泰航恢复9条国内航线)
 1. [杨国福自热锅吃出蝙蝠？两地市监局介入](https://so.toutiao.com/search?keyword=杨国福自热锅吃出蝙蝠？两地市监局介入)
 1. [美法官命令赵长鹏获刑前须留在美国](https://so.toutiao.com/search?keyword=美法官命令赵长鹏获刑前须留在美国)
-1. [美代表“引用”中方发言 耿爽回应](https://so.toutiao.com/search?keyword=美代表“引用”中方发言+耿爽回应)
 1. [保姆疏忽致女童坠亡反告雇主今日开庭](https://so.toutiao.com/search?keyword=保姆疏忽致女童坠亡反告雇主今日开庭)
-1. [两兄弟制售假冒牛肉被判刑](https://so.toutiao.com/search?keyword=两兄弟制售假冒牛肉被判刑)
-1. [刘德华父亲葬礼将以私人形式举行](https://so.toutiao.com/search?keyword=刘德华父亲葬礼将以私人形式举行)
 1. [中国空间站全貌高清图像首次公布](https://so.toutiao.com/search?keyword=中国空间站全貌高清图像首次公布)
-1. [阿根廷当选总统为何改变对华调门](https://so.toutiao.com/search?keyword=阿根廷当选总统为何改变对华调门)
 1. [杨妞花被拐卖案二审择期宣判](https://so.toutiao.com/search?keyword=杨妞花被拐卖案二审择期宣判)
 1. [伊朗海军向美国航母打击群发出警告](https://so.toutiao.com/search?keyword=伊朗海军向美国航母打击群发出警告)
 1. [巴菲特得力助手芒格去世](https://so.toutiao.com/search?keyword=巴菲特得力助手芒格去世)
@@ -64,9 +74,7 @@
 1. [曼城让二追三获头名 哈兰德年度50球](https://so.toutiao.com/search?keyword=曼城让二追三获头名+哈兰德年度50球)
 1. [吴艳妮：辛苦训练不是为了当网红](https://so.toutiao.com/search?keyword=吴艳妮：辛苦训练不是为了当网红)
 1. [布林肯将分别会见以总理和巴总统](https://so.toutiao.com/search?keyword=布林肯将分别会见以总理和巴总统)
-1. [秦海璐：30岁没结婚没什么关系](https://so.toutiao.com/search?keyword=秦海璐：30岁没结婚没什么关系)
 1. [曝纪晓波将吴佩慈名下13亿房产抵押](https://so.toutiao.com/search?keyword=曝纪晓波将吴佩慈名下13亿房产抵押)
-1. [泰国总理接到诈骗电话](https://so.toutiao.com/search?keyword=泰国总理接到诈骗电话)
 1. [胡锡进谈“外资逃离中国”言论](https://so.toutiao.com/search?keyword=胡锡进谈“外资逃离中国”言论)
 1. [莫伊塞斯告别感言：我完成了使命](https://so.toutiao.com/search?keyword=莫伊塞斯告别感言：我完成了使命)
 1. [养老保险重复缴费怎么办](https://so.toutiao.com/search?keyword=养老保险重复缴费怎么办)
@@ -75,7 +83,6 @@
 1. [卡塔尔为何能促成加沙停火延长](https://so.toutiao.com/search?keyword=卡塔尔为何能促成加沙停火延长)
 1. [男子把隔壁桌剩下的猪蹄拿来吃](https://so.toutiao.com/search?keyword=男子把隔壁桌剩下的猪蹄拿来吃)
 1. [巴黎过去48场欧冠小组赛均有进球](https://so.toutiao.com/search?keyword=巴黎过去48场欧冠小组赛均有进球)
-1. [大四男生华山拍照不慎坠崖失联10天](https://so.toutiao.com/search?keyword=大四男生华山拍照不慎坠崖失联10天)
 1. [杨妞花回应余华英案二审](https://so.toutiao.com/search?keyword=杨妞花回应余华英案二审)
 1. [网红“小涛在非洲”在埃塞俄比亚遇害](https://so.toutiao.com/search?keyword=网红“小涛在非洲”在埃塞俄比亚遇害)
 1. [青岛等地车辆坠桥砸人？官方辟谣](https://so.toutiao.com/search?keyword=青岛等地车辆坠桥砸人？官方辟谣)
