--- a/archives/toutiao-search/2023-11-29.md
+++ b/archives/toutiao-search/2023-11-29.md
@@ -1,36 +1,71 @@
 # 2023-11-29
 
-共 246 条
+共 273 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Wed Nov 29 2023 17:00:49 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Wed Nov 29 2023 18:00:40 GMT+0800 (China Standard Time) -->
 1. [武大130周年雷军捐13亿](https://so.toutiao.com/search?keyword=武大130周年雷军捐13亿)
-1. [媒体：别让全红婵再因这事“刷屏”](https://so.toutiao.com/search?keyword=媒体：别让全红婵再因这事“刷屏”)
-1. [链博会展区变身“黑科技”竞技场](https://so.toutiao.com/search?keyword=链博会展区变身“黑科技”竞技场)
 1. [陈东升雷军任中国光谷全球首席顾问](https://so.toutiao.com/search?keyword=陈东升雷军任中国光谷全球首席顾问)
+1. [链博会展区变身“黑科技”竞技场](https://so.toutiao.com/search?keyword=链博会展区变身“黑科技”竞技场)
+1. [武大校庆5位校友捐超3亿](https://so.toutiao.com/search?keyword=武大校庆5位校友捐超3亿)
+1. [华为校招高颜值HR火爆出圈](https://so.toutiao.com/search?keyword=华为校招高颜值HR火爆出圈)
+1. [房东将二居室改成七居室出租](https://so.toutiao.com/search?keyword=房东将二居室改成七居室出租)
+1. [滴滴再次致歉 公布App崩溃原因](https://so.toutiao.com/search?keyword=滴滴再次致歉+公布App崩溃原因)
+1. [辽宁一小学全班罢课？教育局回应](https://so.toutiao.com/search?keyword=辽宁一小学全班罢课？教育局回应)
+1. [火车票退票不扣手续费？ 12306辟谣](https://so.toutiao.com/search?keyword=火车票退票不扣手续费？+12306辟谣)
+1. [西藏阿里全体公务员为女子献血？](https://so.toutiao.com/search?keyword=西藏阿里全体公务员为女子献血？)
+1. [马来西亚女星拍戏时猝死 年仅37岁](https://so.toutiao.com/search?keyword=马来西亚女星拍戏时猝死+年仅37岁)
+1. [业内：3000点是可靠的底部](https://so.toutiao.com/search?keyword=业内：3000点是可靠的底部)
+1. [30万彩礼女方只拿到20万](https://so.toutiao.com/search?keyword=30万彩礼女方只拿到20万)
+1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
+1. [文击同志遗像发布](https://so.toutiao.com/search?keyword=文击同志遗像发布)
+1. [网红小涛在非洲遇害 其亲友发声](https://so.toutiao.com/search?keyword=网红小涛在非洲遇害+其亲友发声)
+1. [1岁半男童手臂被家养藏獒咬断](https://so.toutiao.com/search?keyword=1岁半男童手臂被家养藏獒咬断)
+1. [为什么支原体感染总不好](https://so.toutiao.com/search?keyword=为什么支原体感染总不好)
+1. [市民买房烂尾被诉 法院：贷款不用还](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：贷款不用还)
+1. [食品公司丢弃60余公斤辣椒面被罚5千](https://so.toutiao.com/search?keyword=食品公司丢弃60余公斤辣椒面被罚5千)
+1. [以要摧毁哈马斯 马斯克：别无选择](https://so.toutiao.com/search?keyword=以要摧毁哈马斯+马斯克：别无选择)
+1. [东北小吃“烤冰溜子”在长沙火了](https://so.toutiao.com/search?keyword=东北小吃“烤冰溜子”在长沙火了)
+1. [马国明直言办婚礼好费钱](https://so.toutiao.com/search?keyword=马国明直言办婚礼好费钱)
+1. [马斯克回应被哈马斯邀请访问加沙](https://so.toutiao.com/search?keyword=马斯克回应被哈马斯邀请访问加沙)
+1. [海底捞员工跳科目三是职业内卷吗](https://so.toutiao.com/search?keyword=海底捞员工跳科目三是职业内卷吗)
+1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
+1. [海外业务Temu拉动拼多多业绩暴增](https://so.toutiao.com/search?keyword=海外业务Temu拉动拼多多业绩暴增)
+1. [中方呼吁避免巴以冲突外溢影响](https://so.toutiao.com/search?keyword=中方呼吁避免巴以冲突外溢影响)
+1. [媒体：从阿里云到滴滴的崩溃一夜](https://so.toutiao.com/search?keyword=媒体：从阿里云到滴滴的崩溃一夜)
+1. [招生办女主任出轨校长？官方调查](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？官方调查)
+1. [“牛魔王夫妇”因男方负债600万分手](https://so.toutiao.com/search?keyword=“牛魔王夫妇”因男方负债600万分手)
+1. [印度女子手持扫帚赶跑枪手](https://so.toutiao.com/search?keyword=印度女子手持扫帚赶跑枪手)
+1. [律师谈黑龙江煤矿事故赔偿与责任](https://so.toutiao.com/search?keyword=律师谈黑龙江煤矿事故赔偿与责任)
+1. [汤洛雯晒过大礼照片](https://so.toutiao.com/search?keyword=汤洛雯晒过大礼照片)
+1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
+1. [胃癌关爱日：打赢“保胃战”](https://so.toutiao.com/search?keyword=胃癌关爱日：打赢“保胃战”)
+1. [4名留学生在加遇车祸身亡 警方回应](https://so.toutiao.com/search?keyword=4名留学生在加遇车祸身亡+警方回应)
+1. [魅族21手机开箱上手](https://so.toutiao.com/search?keyword=魅族21手机开箱上手)
+1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
+1. [海底捞：跳“科目三”实行计件薪酬](https://so.toutiao.com/search?keyword=海底捞：跳“科目三”实行计件薪酬)
+1. [全新奔腾B70将于12月初上市](https://so.toutiao.com/search?keyword=全新奔腾B70将于12月初上市)
+1. [勇士面临至暗时刻：领先24分被逆转](https://so.toutiao.com/search?keyword=勇士面临至暗时刻：领先24分被逆转)
+1. [王大雷告别莫伊塞斯和费莱尼](https://so.toutiao.com/search?keyword=王大雷告别莫伊塞斯和费莱尼)
+1. [大V：学门手艺比听芒格箴言强万倍](https://so.toutiao.com/search?keyword=大V：学门手艺比听芒格箴言强万倍)
+1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
+1. [科尔：我们不是在自由落体](https://so.toutiao.com/search?keyword=科尔：我们不是在自由落体)
+1. [男子发烧40多度四五天不退患鹦鹉热](https://so.toutiao.com/search?keyword=男子发烧40多度四五天不退患鹦鹉热)
+1. [乌称不会参加欧安部长级理事会会议](https://so.toutiao.com/search?keyword=乌称不会参加欧安部长级理事会会议)
+1. [转转回应被曝二手手机阴阳报告](https://so.toutiao.com/search?keyword=转转回应被曝二手手机阴阳报告)
+1. [男子患肾病吃半个月桔子查出尿毒症](https://so.toutiao.com/search?keyword=男子患肾病吃半个月桔子查出尿毒症)
+1. [媒体：别让全红婵再因这事“刷屏”](https://so.toutiao.com/search?keyword=媒体：别让全红婵再因这事“刷屏”)
 1. [男子交往20多名女性诈骗700万被诉](https://so.toutiao.com/search?keyword=男子交往20多名女性诈骗700万被诉)
 1. [疑似中国籍货轮在韩国海上沉没](https://so.toutiao.com/search?keyword=疑似中国籍货轮在韩国海上沉没)
-1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
-1. [滴滴再次致歉 公布App崩溃原因](https://so.toutiao.com/search?keyword=滴滴再次致歉+公布App崩溃原因)
-1. [西藏阿里全体公务员为女子献血？](https://so.toutiao.com/search?keyword=西藏阿里全体公务员为女子献血？)
-1. [普京认为俄已恢复全球超级大国地位](https://so.toutiao.com/search?keyword=普京认为俄已恢复全球超级大国地位)
 1. [外交部：衷心希望缅甸局势稳定](https://so.toutiao.com/search?keyword=外交部：衷心希望缅甸局势稳定)
 1. [爸爸和女儿吃饭时即兴来了段科目三](https://so.toutiao.com/search?keyword=爸爸和女儿吃饭时即兴来了段科目三)
-1. [辽宁一小学全班罢课？教育局回应](https://so.toutiao.com/search?keyword=辽宁一小学全班罢课？教育局回应)
 1. [军大衣火了 给高价羽绒服提个醒](https://so.toutiao.com/search?keyword=军大衣火了+给高价羽绒服提个醒)
-1. [文击同志遗像发布](https://so.toutiao.com/search?keyword=文击同志遗像发布)
 1. [巴菲特悼念芒格](https://so.toutiao.com/search?keyword=巴菲特悼念芒格)
-1. [马来西亚女星拍戏时猝死 年仅37岁](https://so.toutiao.com/search?keyword=马来西亚女星拍戏时猝死+年仅37岁)
 1. [广州市人民政府原副秘书长主动投案](https://so.toutiao.com/search?keyword=广州市人民政府原副秘书长主动投案)
 1. [收评：创业板指跌超1%](https://so.toutiao.com/search?keyword=收评：创业板指跌超1%)
-1. [网红小涛在非洲遇害 其亲友发声](https://so.toutiao.com/search?keyword=网红小涛在非洲遇害+其亲友发声)
-1. [马斯克回应被哈马斯邀请访问加沙](https://so.toutiao.com/search?keyword=马斯克回应被哈马斯邀请访问加沙)
 1. [男子花1602天环球旅行57个国家](https://so.toutiao.com/search?keyword=男子花1602天环球旅行57个国家)
 1. [大马男子误撞小象 汽车遭大象踩踏](https://so.toutiao.com/search?keyword=大马男子误撞小象+汽车遭大象踩踏)
-1. [以要摧毁哈马斯 马斯克：别无选择](https://so.toutiao.com/search?keyword=以要摧毁哈马斯+马斯克：别无选择)
 1. [各地出实招做好高校毕业生就业工作](https://so.toutiao.com/search?keyword=各地出实招做好高校毕业生就业工作)
-1. [媒体：从阿里云到滴滴的崩溃一夜](https://so.toutiao.com/search?keyword=媒体：从阿里云到滴滴的崩溃一夜)
-1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
 1. [女子称被公职人员殴打流产 官方回应](https://so.toutiao.com/search?keyword=女子称被公职人员殴打流产+官方回应)
 1. [狗狗不爱吃狗粮就爱吃馒头](https://so.toutiao.com/search?keyword=狗狗不爱吃狗粮就爱吃馒头)
 1. [加沙动物园大部分动物死亡](https://so.toutiao.com/search?keyword=加沙动物园大部分动物死亡)
@@ -38,23 +73,17 @@
 1. [大V：为何社会观念突然转变这么多](https://so.toutiao.com/search?keyword=大V：为何社会观念突然转变这么多)
 1. [男子酒驾给“白队”打电话？系谣传](https://so.toutiao.com/search?keyword=男子酒驾给“白队”打电话？系谣传)
 1. [比亚迪悼念芒格：痛失良师挚友](https://so.toutiao.com/search?keyword=比亚迪悼念芒格：痛失良师挚友)
-1. [房东将二居室改成七居室出租](https://so.toutiao.com/search?keyword=房东将二居室改成七居室出租)
-1. [“牛魔王夫妇”因男方负债600万分手](https://so.toutiao.com/search?keyword=“牛魔王夫妇”因男方负债600万分手)
 1. [巴菲特搭档芒格生前最后一次万字访谈](https://so.toutiao.com/search?keyword=巴菲特搭档芒格生前最后一次万字访谈)
-1. [30万彩礼女方只拿到20万](https://so.toutiao.com/search?keyword=30万彩礼女方只拿到20万)
 1. [东契奇：我防守表现很好](https://so.toutiao.com/search?keyword=东契奇：我防守表现很好)
 1. [职校伤人案嫌犯被刑拘](https://so.toutiao.com/search?keyword=职校伤人案嫌犯被刑拘)
 1. [地球收到1600万公里外的激光数据](https://so.toutiao.com/search?keyword=地球收到1600万公里外的激光数据)
 1. [武汉三镇vs浦和红钻亚冠前瞻](https://so.toutiao.com/search?keyword=武汉三镇vs浦和红钻亚冠前瞻)
 1. [华为途灵智能底盘有哪些优点](https://so.toutiao.com/search?keyword=华为途灵智能底盘有哪些优点)
 1. [全班23人请病假仅3萌娃坚强上课](https://so.toutiao.com/search?keyword=全班23人请病假仅3萌娃坚强上课)
-1. [为什么支原体感染总不好](https://so.toutiao.com/search?keyword=为什么支原体感染总不好)
-1. [转转回应被曝二手手机阴阳报告](https://so.toutiao.com/search?keyword=转转回应被曝二手手机阴阳报告)
 1. [狄龙谈对琼斯三分犯规：我太蠢了](https://so.toutiao.com/search?keyword=狄龙谈对琼斯三分犯规：我太蠢了)
 1. [俞敏洪同莫言走进“高密东北乡”](https://so.toutiao.com/search?keyword=俞敏洪同莫言走进“高密东北乡”)
 1. [阿根廷当选总统为何改变对华调门](https://so.toutiao.com/search?keyword=阿根廷当选总统为何改变对华调门)
 1. [申京场均20+5+5同时命中率55%+](https://so.toutiao.com/search?keyword=申京场均20+5+5同时命中率55%+)
-1. [武大校庆5位校友捐超3亿](https://so.toutiao.com/search?keyword=武大校庆5位校友捐超3亿)
 1. [《美丽的草原我的家》原唱德德玛去世](https://so.toutiao.com/search?keyword=《美丽的草原我的家》原唱德德玛去世)
 1. [投资界传奇大佬芒格去世 享年99岁](https://so.toutiao.com/search?keyword=投资界传奇大佬芒格去世+享年99岁)
 1. [杨妞花：不接受余华英的任何道歉](https://so.toutiao.com/search?keyword=杨妞花：不接受余华英的任何道歉)
@@ -62,7 +91,6 @@
 1. [网民被罚发朋友圈检讨？警方辟谣](https://so.toutiao.com/search?keyword=网民被罚发朋友圈检讨？警方辟谣)
 1. [朱丹曾被好友骗光所有积蓄](https://so.toutiao.com/search?keyword=朱丹曾被好友骗光所有积蓄)
 1. [曝网红麦小登成功诞下宝宝](https://so.toutiao.com/search?keyword=曝网红麦小登成功诞下宝宝)
-1. [食品公司丢弃60余公斤辣椒面被罚5千](https://so.toutiao.com/search?keyword=食品公司丢弃60余公斤辣椒面被罚5千)
 1. [新华社发布文击同志遗像](https://so.toutiao.com/search?keyword=新华社发布文击同志遗像)
 1. [黄渤路演摔跤高情商化解尴尬](https://so.toutiao.com/search?keyword=黄渤路演摔跤高情商化解尴尬)
 1. [国台办回应萧美琴有关言论](https://so.toutiao.com/search?keyword=国台办回应萧美琴有关言论)
@@ -137,7 +165,6 @@
 1. [小勐拉为何没支援果敢同盟军](https://so.toutiao.com/search?keyword=小勐拉为何没支援果敢同盟军)
 1. [演唱会后小杨哥旗下账号涨粉400万](https://so.toutiao.com/search?keyword=演唱会后小杨哥旗下账号涨粉400万)
 1. [王健林如何渡过万达这一劫？](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫？)
-1. [海底捞：跳“科目三”实行计件薪酬](https://so.toutiao.com/search?keyword=海底捞：跳“科目三”实行计件薪酬)
 1. [加沙地带民众期盼实现永久停火](https://so.toutiao.com/search?keyword=加沙地带民众期盼实现永久停火)
 1. [凛冬将至 俄乌转入阵地消耗战](https://so.toutiao.com/search?keyword=凛冬将至+俄乌转入阵地消耗战)
 1. [机构策略：A股整体继续修复](https://so.toutiao.com/search?keyword=机构策略：A股整体继续修复)
