--- a/archives/toutiao-search/2023-11-30.md
+++ b/archives/toutiao-search/2023-11-30.md
@@ -1,48 +1,74 @@
 # 2023-11-30
 
-共 167 条
+共 190 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Thu Nov 30 2023 11:00:42 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Thu Nov 30 2023 12:00:38 GMT+0800 (China Standard Time) -->
 1. [美国前国务卿基辛格去世](https://so.toutiao.com/search?keyword=美国前国务卿基辛格去世)
 1. [李连杰称已和太太交代后事](https://so.toutiao.com/search?keyword=李连杰称已和太太交代后事)
 1. [12月一批民生新规开始施行](https://so.toutiao.com/search?keyword=12月一批民生新规开始施行)
-1. [公务车别停公交车 涉事人员被停职](https://so.toutiao.com/search?keyword=公务车别停公交车+涉事人员被停职)
-1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
+1. [“羽绒服一哥”危险信号曝光](https://so.toutiao.com/search?keyword=“羽绒服一哥”危险信号曝光)
+1. [在菲被绑架6名中国人已有4人被撕票](https://so.toutiao.com/search?keyword=在菲被绑架6名中国人已有4人被撕票)
 1. [基辛格访问中国一百多次](https://so.toutiao.com/search?keyword=基辛格访问中国一百多次)
-1. [杨鸣妻子删除简介和与丈夫合照](https://so.toutiao.com/search?keyword=杨鸣妻子删除简介和与丈夫合照)
-1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
+1. [媒体评军大衣翻红销量暴增](https://so.toutiao.com/search?keyword=媒体评军大衣翻红销量暴增)
+1. [高迪社媒庆祝胜利](https://so.toutiao.com/search?keyword=高迪社媒庆祝胜利)
 1. [支原体肺炎是新冠变异？](https://so.toutiao.com/search?keyword=支原体肺炎是新冠变异？)
-1. [中国关于解决巴以冲突的立场文件](https://so.toutiao.com/search?keyword=中国关于解决巴以冲突的立场文件)
+1. [基辛格被称为“中国人民的老朋友”](https://so.toutiao.com/search?keyword=基辛格被称为“中国人民的老朋友”)
 1. [献血事件女子父亲：百万包机系借款](https://so.toutiao.com/search?keyword=献血事件女子父亲：百万包机系借款)
 1. [4个公租房小区排查出766户公职人员](https://so.toutiao.com/search?keyword=4个公租房小区排查出766户公职人员)
+1. [基辛格官网悼文提到11次中国](https://so.toutiao.com/search?keyword=基辛格官网悼文提到11次中国)
 1. [王力宏在潘玮柏婚礼上献唱](https://so.toutiao.com/search?keyword=王力宏在潘玮柏婚礼上献唱)
-1. [炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=炫耀动员公务员献血让人如何理性)
+1. [物业不让业主车进小区警察抬杆准入](https://so.toutiao.com/search?keyword=物业不让业主车进小区警察抬杆准入)
+1. [基辛格葬礼将以家庭仪式形式举行](https://so.toutiao.com/search?keyword=基辛格葬礼将以家庭仪式形式举行)
+1. [奔驰停斑马线超24小时司机车内离世](https://so.toutiao.com/search?keyword=奔驰停斑马线超24小时司机车内离世)
+1. [狗子为了合群装不认识主人](https://so.toutiao.com/search?keyword=狗子为了合群装不认识主人)
+1. [山西太原3.7级地震无人员伤亡](https://so.toutiao.com/search?keyword=山西太原3.7级地震无人员伤亡)
+1. [女大学生当街撞衫50岁大妈](https://so.toutiao.com/search?keyword=女大学生当街撞衫50岁大妈)
+1. [中国向联合国机构提供百万美元援助](https://so.toutiao.com/search?keyword=中国向联合国机构提供百万美元援助)
 1. [15岁女生被同学奸杀案二审维持无期](https://so.toutiao.com/search?keyword=15岁女生被同学奸杀案二审维持无期)
 1. [招生办女主任出轨校长？女方回应](https://so.toutiao.com/search?keyword=招生办女主任出轨校长？女方回应)
+1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
+1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
+1. [胡锡进：中国人不缺大信心](https://so.toutiao.com/search?keyword=胡锡进：中国人不缺大信心)
+1. [导致胃癌的6个高危因素](https://so.toutiao.com/search?keyword=导致胃癌的6个高危因素)
+1. [00后边防女兵谈为国牺牲](https://so.toutiao.com/search?keyword=00后边防女兵谈为国牺牲)
+1. [《新闻女王》多达15位前港姐参演](https://so.toutiao.com/search?keyword=《新闻女王》多达15位前港姐参演)
+1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
 1. [广西一交警持棍击倒过路电动车](https://so.toutiao.com/search?keyword=广西一交警持棍击倒过路电动车)
+1. [中纪委公布4名“内鬼”被查处消息](https://so.toutiao.com/search?keyword=中纪委公布4名“内鬼”被查处消息)
+1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
+1. [基辛格逝世：其精神的现实意义](https://so.toutiao.com/search?keyword=基辛格逝世：其精神的现实意义)
+1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
+1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
+1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
+1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
+1. [专家：搞好股市不能总盯着3000点](https://so.toutiao.com/search?keyword=专家：搞好股市不能总盯着3000点)
+1. [男子一路尾随女子趁等电梯多次猥亵](https://so.toutiao.com/search?keyword=男子一路尾随女子趁等电梯多次猥亵)
+1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
+1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
+1. [中国新免签政策受到欧洲各界欢迎](https://so.toutiao.com/search?keyword=中国新免签政策受到欧洲各界欢迎)
+1. [哈马斯称三被扣人员在以空袭中身亡](https://so.toutiao.com/search?keyword=哈马斯称三被扣人员在以空袭中身亡)
+1. [多省市政府项目不得由施工单位垫资](https://so.toutiao.com/search?keyword=多省市政府项目不得由施工单位垫资)
+1. [美方制裁20多名涉伊朗的个人和实体](https://so.toutiao.com/search?keyword=美方制裁20多名涉伊朗的个人和实体)
+1. [潘玮柏婚礼当众亲吻爱妻宣云](https://so.toutiao.com/search?keyword=潘玮柏婚礼当众亲吻爱妻宣云)
+1. [中纪委官网发布：“内鬼”何江被查](https://so.toutiao.com/search?keyword=中纪委官网发布：“内鬼”何江被查)
+1. [女儿给父亲买“犟驴”蛋糕过生日](https://so.toutiao.com/search?keyword=女儿给父亲买“犟驴”蛋糕过生日)
+1. [德德玛儿子：母亲在睡梦中安详离世](https://so.toutiao.com/search?keyword=德德玛儿子：母亲在睡梦中安详离世)
+1. [公务车别停公交车 涉事人员被停职](https://so.toutiao.com/search?keyword=公务车别停公交车+涉事人员被停职)
+1. [杨鸣妻子删除简介和与丈夫合照](https://so.toutiao.com/search?keyword=杨鸣妻子删除简介和与丈夫合照)
+1. [中国关于解决巴以冲突的立场文件](https://so.toutiao.com/search?keyword=中国关于解决巴以冲突的立场文件)
+1. [炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=炫耀动员公务员献血让人如何理性)
 1. [4分钟回顾基辛格政治生涯](https://so.toutiao.com/search?keyword=4分钟回顾基辛格政治生涯)
 1. [美国一官员嫖娼遇警察卧底](https://so.toutiao.com/search?keyword=美国一官员嫖娼遇警察卧底)
-1. [叶卡捷琳娜·敦佐娃称要竞选俄总统](https://so.toutiao.com/search?keyword=叶卡捷琳娜·敦佐娃称要竞选俄总统)
-1. [市民买房烂尾被诉 法院：不用还贷](https://so.toutiao.com/search?keyword=市民买房烂尾被诉+法院：不用还贷)
 1. [大爷围着隔离柱转半天最终拔走](https://so.toutiao.com/search?keyword=大爷围着隔离柱转半天最终拔走)
-1. [潘玮柏晒结婚照](https://so.toutiao.com/search?keyword=潘玮柏晒结婚照)
-1. [美据称回收至少9艘非人类制造飞船](https://so.toutiao.com/search?keyword=美据称回收至少9艘非人类制造飞船)
-1. [教育局回应全班罢课：取消调班计划](https://so.toutiao.com/search?keyword=教育局回应全班罢课：取消调班计划)
-1. [机器人准备进电梯被两男子踹倒](https://so.toutiao.com/search?keyword=机器人准备进电梯被两男子踹倒)
 1. [美一军机迫降海面至今未被运走](https://so.toutiao.com/search?keyword=美一军机迫降海面至今未被运走)
 1. [疑似横渡长江野猪流窜进城区并伤人](https://so.toutiao.com/search?keyword=疑似横渡长江野猪流窜进城区并伤人)
 1. [欧冠出线12队分布：西甲4队](https://so.toutiao.com/search?keyword=欧冠出线12队分布：西甲4队)
 1. [中国推动巴以局势缓和获力挺](https://so.toutiao.com/search?keyword=中国推动巴以局势缓和获力挺)
 1. [马云内网回应拼多多市值逼近阿里](https://so.toutiao.com/search?keyword=马云内网回应拼多多市值逼近阿里)
-1. [《新闻女王》多达15位前港姐参演](https://so.toutiao.com/search?keyword=《新闻女王》多达15位前港姐参演)
-1. [鹅腿阿姨发视频哽咽：压力太大了](https://so.toutiao.com/search?keyword=鹅腿阿姨发视频哽咽：压力太大了)
-1. [00后边防女兵谈为国牺牲](https://so.toutiao.com/search?keyword=00后边防女兵谈为国牺牲)
 1. [车主高速遇障碍物停车清理未被扣分](https://so.toutiao.com/search?keyword=车主高速遇障碍物停车清理未被扣分)
 1. [马来西亚女星拍戏时猝死 年仅37岁](https://so.toutiao.com/search?keyword=马来西亚女星拍戏时猝死+年仅37岁)
 1. [媒体：房地产调整逐步到位](https://so.toutiao.com/search?keyword=媒体：房地产调整逐步到位)
-1. [美吉姆：无法与董事长取得联系](https://so.toutiao.com/search?keyword=美吉姆：无法与董事长取得联系)
-1. [13岁女儿离世爸爸一夜白头](https://so.toutiao.com/search?keyword=13岁女儿离世爸爸一夜白头)
 1. [雷军回应向武大捐13亿：还愿之旅](https://so.toutiao.com/search?keyword=雷军回应向武大捐13亿：还愿之旅)
 1. [两家上市公司董事长失联引发关注](https://so.toutiao.com/search?keyword=两家上市公司董事长失联引发关注)
 1. [台名嘴揭露萧美琴过往底细](https://so.toutiao.com/search?keyword=台名嘴揭露萧美琴过往底细)
@@ -56,7 +82,6 @@
 1. [女子爱吃生腌长寄生虫 被切除子宫](https://so.toutiao.com/search?keyword=女子爱吃生腌长寄生虫+被切除子宫)
 1. [多地推动一刻钟便民生活圈建设](https://so.toutiao.com/search?keyword=多地推动一刻钟便民生活圈建设)
 1. [患儿挤爆广州儿科门急诊？记者走访](https://so.toutiao.com/search?keyword=患儿挤爆广州儿科门急诊？记者走访)
-1. [女儿给父亲买“犟驴”蛋糕过生日](https://so.toutiao.com/search?keyword=女儿给父亲买“犟驴”蛋糕过生日)
 1. [朱立伦透露侯康配与赖萧配只差0.4%](https://so.toutiao.com/search?keyword=朱立伦透露侯康配与赖萧配只差0.4%)
 1. [女子手机定位男子家中警察协助调查](https://so.toutiao.com/search?keyword=女子手机定位男子家中警察协助调查)
 1. [王健林如何渡过万达这一劫](https://so.toutiao.com/search?keyword=王健林如何渡过万达这一劫)
@@ -93,7 +118,6 @@
 1. [媒体：炫耀动员公务员献血让人如何理性](https://so.toutiao.com/search?keyword=媒体：炫耀动员公务员献血让人如何理性)
 1. [小孩哥给大学生讲高数](https://so.toutiao.com/search?keyword=小孩哥给大学生讲高数)
 1. [媒体评“鹅腿阿姨”走红](https://so.toutiao.com/search?keyword=媒体评“鹅腿阿姨”走红)
-1. [中国对6国试行免签后引发强烈反响](https://so.toutiao.com/search?keyword=中国对6国试行免签后引发强烈反响)
 1. [支原体肺炎能否自愈](https://so.toutiao.com/search?keyword=支原体肺炎能否自愈)
 1. [海底捞部分门店不让跳“科目三”了](https://so.toutiao.com/search?keyword=海底捞部分门店不让跳“科目三”了)
 1. [神十六回家前拍下空间站首张全身照](https://so.toutiao.com/search?keyword=神十六回家前拍下空间站首张全身照)
@@ -145,7 +169,6 @@
 1. [王毅会见联合国秘书长古特雷斯](https://so.toutiao.com/search?keyword=王毅会见联合国秘书长古特雷斯)
 1. [中方呼吁避免巴以冲突外溢影响](https://so.toutiao.com/search?keyword=中方呼吁避免巴以冲突外溢影响)
 1. [空间站工作照的背景有多美](https://so.toutiao.com/search?keyword=空间站工作照的背景有多美)
-1. [导致胃癌的6个高危因素](https://so.toutiao.com/search?keyword=导致胃癌的6个高危因素)
 1. [中国空间站高清“全家福”如何诞生](https://so.toutiao.com/search?keyword=中国空间站高清“全家福”如何诞生)
 1. [呼吸道感染如何防治 专家解答](https://so.toutiao.com/search?keyword=呼吸道感染如何防治+专家解答)
 1. [福特蒙迪欧混动极限测试](https://so.toutiao.com/search?keyword=福特蒙迪欧混动极限测试)
